"updated time values"

--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
     <section id="middle">
         <div class="container">
             <div class="modes">
-                <div id="pomodoro">
-                    <button>
+                <div>
+                    <button id="pomodoro">
                         Pomodoro
                     </button>
                 </div>
-                <div id="shortBreak">
-                    <button>
+                <div>
+                    <button id="shortBreak">
                         Short Break
                     </button>
                 </div>
-                <div id="longBreak">
-                    <button>
+                <div>
+                    <button id="longBreak">
                         Long Break
                     </button>
                 </div>
